fix: adjust margins and font sizes in hands and screen blocks for improved layout and readability

--- a/src/app/pages/room/room.scss
+++ b/src/app/pages/room/room.scss
@@ -135,15 +135,15 @@
   box-shadow: 0 0 8px #ff005d33;
   h3 { color: #ff005d; margin-bottom: 0.27em; font-size: 1.08em; text-shadow: 0 0 6px #ff005d77;}
   div {
-    margin: 1.5em 0;
+    margin: 2em 0;
     h4 {
-      margin: 0.5em;
+      margin: 0.3em;
     }
     h5 {
-      margin: 0.5em;
+      margin: 0.3em;
     }
     p {
-      margin: 0.5em;
+      margin: 0.3em;
     }
   }
 }
